pc finished10