@@ -65,11 +65,8 @@ public class Warehouse {
     }
 
     public List<ProductRecord> getProducts() {
-        List<ProductRecord> productList = new ArrayList<>();
-        productList.add(new ProductRecord(UUID.randomUUID(), "Milk", Category.of("Dairy"), BigDecimal.valueOf(999, 2)));
-        productList.add(new ProductRecord(UUID.randomUUID(), "Apple", Category.of("Fruit"), BigDecimal.valueOf(290, 2)));
         // Add other products as needed
-        return Collections.unmodifiableList(productList);
+        return List.of(new ProductRecord(UUID.randomUUID(), "Milk", Category.of("Dairy"), BigDecimal.valueOf(999, 2)), new ProductRecord(UUID.randomUUID(), "Apple", Category.of("Fruit"), BigDecimal.valueOf(290, 2)));
     }
 
     public List<ProductRecord> getChangedProducts() {
